[project]
name = "pyhashbench"
version = "0.1.1"
description = "A comprehensive testing library for your hash functions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "ruff>=0.7.3",
    "scipy",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
